# LiteKit

./: .gitignore  .pre-commit-config.yaml  LICENSE  MMLKit接入文档.md  README.md
Doc/: LiteKitCoreFAQ.md  LiteKitCore接入文档(for Java API).md  LiteKitCore接入文档(for Native C++ API on Android).md  LiteKitCore接入文档(for Native C++ API on iOS).md  LiteKitCore接入文档(for Objective-C API).md  LiteKitCore接口文档(for Java API).md  LiteKitCore接口文档(for Native C++ API).md  LiteKitCore接口文档(for Objective-C API).md  LiteKitFAQ.md  LiteKit接口文档_人像分割.md  LiteKit接口文档_手势识别.md  LiteKit接口文档_视频超分.md  MMLCore接入文档(for Java API).md  MMLCore接入文档(for Native C++ API on Android).md  MMLCore接入文档(for Native C++ API on iOS).md  MMLCore接入文档(for OC API).md  MMLCore接入文档(for Objective-C API).md  MMLCore接口文档(for Java API).md  MMLCore接口文档(for Native C++ API).md  MMLCore接口文档(for OC API).md  MMLCore接口文档(for Objective-C API).md  MMLKit接入文档(for Android).md  MMLKit接入文档(for OC).md  MMLKit接入文档(for iOS).md  MMLKit接口文档(for Android).md  MMLKit接口文档(for OC).md  MMLKit接口文档(for iOS).md
LiteKitCore/LiteKitCore/Android/: README.md  settings.gradle
LiteKitCore/LiteKitCore/Android/litekitcore/: build.gradle
LiteKitCore/LiteKitCore/Android/litekitcore/src/main/cpp/: CMakeLists.txt
LiteKitCore/LiteKitCore/Android/litekitcore/src/main/cpp/include/: common_log.h  litekit_init.h  litekit_input.h  litekit_output.h  litekit_release.h  litekit_run.h  litekit_tensor.h  mml_inference_api.h  mml_input.h
LiteKitCore/LiteKitCore/Android/litekitcore/src/main/cpp/src/: dynamic_register_native_methods.cpp  litekit_init.cpp  litekit_input.cpp  litekit_output.cpp  litekit_release.cpp  litekit_run.cpp  litekit_tensor.cpp  mml_init.cpp  mml_output.cpp  mml_release.cpp  mml_run.cpp  mml_tensor.cpp
LiteKitCore/LiteKitCore/C++/: CMakeLists.txt  README.md  build_android.sh
LiteKitCore/LiteKitCore/C++/build-ios/: CMakeLists.txt  README.md  product_build.sh
LiteKitCore/LiteKitCore/C++/build-ios/tools/: iOS.cmake
LiteKitCore/LiteKitCore/C++/src/main/cpp/litekit_framework/: CMakeLists.txt  base_machine_predictor.h  common_log.h  litekit_convertor.cpp  litekit_convertor.h  litekit_filetools.cpp  litekit_filetools.h  litekit_inference_api.cpp  litekit_inference_api.h  mml_filetools.cpp  mml_filetools.h  mml_inference_api.h  platform_switch.h
LiteKitCore/LiteKitCore/C++/src/main/cpp/litekit_framework/paddle_gpu/: paddle_gpu_machine_predictor.cpp  paddle_gpu_machine_predictor.h
LiteKitCore/LiteKitCore/C++/src/main/cpp/litekit_framework/paddle_gpu_header/: PaddleMobileGPU.h
LiteKitCore/LiteKitCore/C++/src/main/cpp/litekit_framework/paddle_lite/: paddle_lite_image_preprocess.cpp  paddle_lite_image_preprocess.h  paddle_lite_machine_predictor.cpp  paddle_lite_machine_predictor.h
LiteKitCore/LiteKitCore/C++/src/main/cpp/litekit_framework/paddle_lite_header/: paddle_image_preprocess.h  paddle_use_kernels.h  paddle_use_ops.h
LiteKitCore/LiteKitCore/iOS/Dependences/: README.md
LiteKitCore/LiteKitCore/iOS/Sources/: LiteKitCore.h  MML.h
LiteKitCore/LiteKitCore/iOS/Sources/Backend/: PaddleCPU.h  PaddleCPU.mm
LiteKitCore/LiteKitCore/iOS/Sources/Config/: LiteKitInferenceEngineConfigProtocol.h  LiteKitMachineConfig.h  LiteKitMachineConfig.m  LiteKitMachineConfigProtocol.h  LiteKitPaddleConfig.h  LiteKitPaddleConfig.m  MMLMachineConfig.h  MMLMachineConfigProtocol.h
LiteKitCore/LiteKitCore/iOS/Sources/Converter/: LiteKitInputConvertor.h  LiteKitInputConvertor.m  LiteKitOutputConvertor.h  LiteKitOutputConvertor.m  MMLInputConvertor.h  MMLOutputConvertor.h  MMLOutputConvertor.m
LiteKitCore/LiteKitCore/iOS/Sources/Dispatcher/: LiteKitTask.h  LiteKitTask.m  LiteKitTaskDispatcherManager.h  LiteKitTaskDispatcherManager.m  LiteKitTaskQueue.h  LiteKitTaskQueue.m  MMLTask.h  MMLTaskDispatcherManager.h  MMLTaskQueue.h  (+1 more)
LiteKitCore/LiteKitCore/iOS/build-ios/: Podfile  product_build.sh
LiteKitCore/LiteKitCoreDemo/Android/: README.md
LiteKitCore/LiteKitCoreDemo/Android/app/: build.gradle
LiteKitCore/LiteKitCoreDemo/iOS/: Podfile  pmgpu_zip_config.plist
LiteKitCore/LiteKitCoreDemo/iOS/Dependence/: README.md
LiteKitCore/LiteKitCoreDemo/iOS/LiteKitCoreDemo/: AppDelegate.h  AppDelegate.m  File.swift  Info.plist  LiteKitCoreDemo-Bridging-Header.h  ViewController+LiteKitCore_CPP.h  ViewController+LiteKitCore_CPP.mm  ViewController+LiteKitCore_OC.h  ViewController+LiteKitCore_OC.mm  ViewController+View.h  ViewController+View.mm  ViewController.h  ViewController.mm  main.m
LiteKitCore/LiteKitCoreDemo/iOS/LiteKitCoreDemo.xcodeproj/: project.pbxproj
LiteKitCore/LiteKitCoreDemo/iOS/MMLDemo/: ViewController+MMLCore_CPP.mm  ViewController+MMLCore_OC.h  ViewController.mm  main.m
LiteKitCore/LiteKitCoreDemo/iOS/MMLDemo.xcodeproj/: project.pbxproj
LiteKitDemo/Android/: README.md
LiteKitDemo/Android/LiteKitDemo/: build.gradle  settings.gradle
LiteKitDemo/Android/LiteKitDemo/app/: build.gradle
LiteKitDemo/iOS/: README.md
LiteKitDemo/iOS/LiteKitDemo/: Podfile
LiteKitDemo/iOS/LiteKitDemo/LiteKitDemo/: AppDelegate.mm  LiteKitDemo-Bridging-Header.h  ViewController.m
LiteKitDemo/iOS/LiteKitDemo/LiteKitDemo.xcodeproj/: project.pbxproj
LiteKitDemo/iOS/MMLKitDemo/: Podfile
LiteKitDemo/iOS/MMLKitDemo/MMLKitDemo/: ViewController.m
MMLCore/MML/Android/: README.md
MMLCore/MML/C++/: README.md  build_android.sh
MMLCore/MML/C++/src/: README.md
MMLCore/MML/iOS/Dependences/: README.md
MMLCore/MML/iOS/Sources/: MML.h
MMLCore/MMLDemo/Android/: .gitignore
MMLCore/MMLDemo/Android/app/: build.gradle
MMLCore/MMLDemo/iOS/: paddle-mobile-metallib.metallib
MMLCore/MMLDemo/iOS/MMLDemo/: AppDelegate.h  AppDelegate.m  File.swift  MMLDemo-Bridging-Header.h  ViewController+MMLCore_CPP.h  ViewController+MMLCore_CPP.mm  ViewController+MMLCore_OC.h  ViewController+MMLCore_OC.mm  ViewController.h  ViewController.mm  main.m
MMLKit/: .gitignore
MMLKit/MMLKitDemo/Android/: README.md
MMLKit/MMLKitDemo/Android/mml/: .gitignore  settings.gradle
MMLKit/MMLKitDemo/iOS/MMLKitDemo/: Podfile
tools/codestyle/: copyright.hook  docstring_checker.py  test_docstring_checker.py
(+324 files in other folders)
